# crapapp

./: .gitignore  Cargo.toml  README.md  configurations.md
embedded-templates/windows-installer-cli/src/: uninstall.rs
embedded-templates/windows-installer-core/src/: cli.rs  config.rs  registry.rs
example/: CRAP.toml  Cargo.toml  build.rs
example/.crapapp_build/windows/x86_64-pc-windows-gnu/setup-src/: Cargo.toml  build.rs
example/.crapapp_build/windows/x86_64-pc-windows-gnu/setup-src/src/: setup.rs  uninstall.rs
example/src/: main.rs
src/: cli.rs  main.rs
src/services/: build_config_manifest.rs  build_manifest.rs  build_variable.rs  builder.rs  cargo_package.rs  icons.rs  manifest_file.rs  mod.rs  payload_file.rs  platform_manifest.rs  target_manifest.rs  toolchain_manifest.rs  windows_bundler.rs
templates/assets/: build.rs.j2
templates/windows-installer-cli/: Cargo.toml  Cargo.toml.j2  build.rs
templates/windows-installer-cli/src/: generated.rs  setup.rs  uninstall.rs
templates/windows-installer-core/: Cargo.toml
templates/windows-installer-core/src/: cli.rs  config.rs  install.rs  lib.rs  registry.rs  uninstall.rs
templates/windows-installer-gui/: Cargo.toml  Cargo.toml.j2
templates/windows-installer-gui/src/: main.rs
templates/windows-setup/: build.rs
templates/windows-setup/src/: setup.rs  uninstall.rs
